syntax = "proto3";
package mantrachain.txfees.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "mantrachain/txfees/v1/params.proto";
import "mantrachain/txfees/v1/fee_token.proto";

option go_package = "github.com/MANTRA-Finance/mantrachain/x/txfees/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/mantrachain/txfees/v1/params";
  }

  // Queries a list of FeeToken items.
  rpc QueryFeeToken    (QueryGetFeeTokenRequest) returns (QueryGetFeeTokenResponse) {
    option (google.api.http).get = "/mantrachain/txfees/v1/fee_token/{denom}";
  
  }
  // Queries a list of FeeToken items.
  rpc QueryFeeTokenAll (QueryAllFeeTokenRequest) returns (QueryAllFeeTokenResponse) {
    option (google.api.http).get = "/mantrachain/txfees/v1/fee_token";
  }
  
  // Queries a list of FeeToken items.
  rpc QueryGasEstimation    (QueryGetGasEstimationRequest) returns (QueryGetGasEstimationResponse) {
    option (google.api.http).get = "/mantrachain/txfees/v1/gas_estimation";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryGetFeeTokenRequest
message QueryGetFeeTokenRequest {
  string denom = 1;
}

// QueryGetFeeTokenResponse
message QueryGetFeeTokenResponse {
  FeeToken fee_token = 1 [(gogoproto.nullable) = false];
}

// QueryGetGasEstimationRequest
message QueryGetGasEstimationRequest {
  string amount = 1;
  string denom = 2;
}

// QueryGetGasEstimationResponse
message QueryGetGasEstimationResponse {
  cosmos.base.v1beta1.Coin amount = 1 [(gogoproto.nullable) = false];
}

// QueryAllFeeTokenRequest
message QueryAllFeeTokenRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAllFeeTokenResponse
message QueryAllFeeTokenResponse {
  repeated FeeToken                               fee_token   = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

